--- a/css/home.css
+++ b/css/home.css
@@ -136,18 +136,30 @@ body {
 
   }
 
+  @media(max-width: 600px) {
+    img.circular1 {
+      border: 10px solid transparent;
+    }
+  }
+
   img.circular2 {
     width: 80%;  
     border-radius: 50%;
     box-shadow: 0px 0px 8cqi 0px rgba(172, 165, 165, 0.8);
     border: 20px solid transparent;
     
-}
+  }
+
+  @media(max-width: 600px) {
+    img.circular2 {
+      border: 10px solid transparent;
+    }
+  }
 
 img.circular1:hover {
   -webkit-transform: scale(1.1);
--ms-transform: scale(1.1);
-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
   opacity:0.8;
 }
   
@@ -172,6 +184,12 @@ transform: scale(1.1);
     box-shadow: 0px 0px 8cqi 0px rgba(172, 165, 165, 0.8);
     border: 20px solid transparent;
 
+  }
+
+  @media(max-width: 600px) {
+    img.circular3 {
+      border: 10px solid transparent;
+    }
   }
 
   .contenedor2{
