--- a/css/home.css
+++ b/css/home.css
@@ -40,7 +40,7 @@ body {
   }
 
   .menu a{
-    width: 150px;
+    width: 100%;
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
@@ -57,15 +57,16 @@ body {
   
 
   .imglogo{
-   
+  
     width: 15%;
   }
 
-  @media(max-width: 600px) {
+   @media(max-width: 600px) {
     .imglogo{
-      width: 100%;
+      margin: auto;
+      width: 60%;
     }
-  }
+  } 
   
 
   /*Menu*/
